# unifi-protect-mcp-server

./: main.py  pyproject.toml  webhook_listener.py
