[project]
name = "unifi-protect-mcp-server"
version = "1.0.0"
description = "UniFi Protect MCP Server with STDIO transport"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "uiprotect>=5.2.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
